<resources>
    <string name="app_name">CrochetApp</string>

    <!-- Patter Input Fields -->
    <string name="pattern_name">Pattern Name</string>
    <string name="category">Category</string>
    <string name="part">Part</string>
    <string name="difficulty">Difficulty</string>

    <!-- Button Text -->
    <string name="add_new_pattern">Add Pattern</string>
    <string name="save_pattern">Save Pattern</string>
    <string name="upload_image">Image</string>
    <string name="open_pdf">Instructions</string>
    <string name="edit_pattern">Edit Pattern</string>
    <string name="delete_pattern">Delete Pattern</string>
    <string name="upload_pdf">Instructions (.pdf)</string>
    <string name="image_selected">Image Selected</string>
    <string name="pdf_selected">PDF Selected</string>

    <!-- Bottom Nav & Page Titles -->
    <string name="patterns">Patterns</string>
    <string name="current_project">Current Project</string>
    <string name="settings">Settings</string>
    <string name="image_of_the_selected_crochet_pattern">Image of the selected crochet pattern</string>
    <string name="pattern_details">Pattern Details</string>
    <string name="change_image">Change Image</string>
    <string name="change_pdf">Change PDF</string>
</resources>